--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_enterprise.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_enterprise.html
@@ -13,6 +13,132 @@
 
             <div class="notes-content">
 
+                <h3 id="Enterprise"><b><u>Enterprise & Business Innovations:</b></u></h3>
+
+                <!-- Crowd Funding -->
+                <h3 id="CrowdFunding"><b><u>Crowd Funding:</b></u></h3>
+                <h3><ul>
+                    <li>Raising small amounts of money from many people via online platforms</li>
+                    <li>Used by startups to launch products without traditional investors</li>
+                </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Access to capital without giving up equity</li>
+                                <li>Validates market demand before production</li>
+                                <li>Builds customer community</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Platform fees (5-12% of funds raised)</li>
+                                <li>Requires strong marketing effort</li>
+                                <li>Failed projects damage reputation</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> Kickstarter, Indiegogo<br><br></h3>
+
+                <!-- Virtual Marketing & Retail -->
+                <h3 id="VirtualRetail"><b><u>Virtual Marketing & Retail:</b></u></h3>
+                <h3><ul>
+                    <li>Selling directly to consumers through digital channels</li>
+                    <li>Uses social media, influencers and online marketplaces</li>
+                </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lower overhead than physical stores</li>
+                                <li>Global customer reach</li>
+                                <li>Real-time sales data analytics</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>High competition for visibility</li>
+                                <li>Dependent on platform algorithms</li>
+                                <li>Returns/logistics challenges</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> Shopify stores, Instagram shops<br><br></h3>
+
+                <!-- Co-operatives -->
+                <h3 id="Cooperatives"><b><u>Co-operatives:</b></u></h3>
+                <h3><ul>
+                    <li>Businesses owned and run by members (workers or customers)</li>
+                    <li>Profits shared based on participation</li>
+                </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Democratic decision making</li>
+                                <li>Strong employee motivation</li>
+                                <li>Community reinvestment</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Slower decision processes</li>
+                                <li>Capital raising challenges</li>
+                                <li>Potential skill gaps in members</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> The Co-op, Mondragon Corporation<br><br></h3>
+
+                <!-- Fair Trade -->
+                <h3 id="FairTrade"><b><u>Fair Trade:</b></u></h3>
+                <h3><ul>
+                    <li>Ethical certification ensuring fair wages/sustainable practices</li>
+                    <li>Premium prices support producer communities</li>
+                </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Improved producer livelihoods</li>
+                                <li>Premium market positioning</li>
+                                <li>Environmental sustainability</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Higher product costs</li>
+                                <li>Complex certification process</li>
+                                <li>Limited consumer awareness</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> Fairtrade coffee, Divine Chocolate<br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
