--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_environment.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_environment.html
@@ -13,6 +13,45 @@
 
             <div class="notes-content">
 
+                <h3 id="ContinuousImprovement"><b><u>Continuous Improvement:</b></u></h3>
+                <h3><ul>
+                    <li>Ongoing process of reducing environmental impact through design iterations</li>
+                    <li><b>Example:</b> LED lightbulbs using 75% less energy than incandescent versions</li>
+                    <li><b>Example:</b> Smart thermostats learning user patterns to optimize heating</li>
+                    <li>Lifecycle analysis used to identify improvement areas (raw materials → disposal)</li>
+                </ul></h3>
+
+                <h3 id="EfficientWorking"><b><u>Efficient Working:</b></u></h3>
+                <h3><ul>
+                    <li>Minimising waste in production processes (energy, materials, time)</li>
+                    <li><b>Example:</b> Toyota's "just-in-time" manufacturing reducing warehouse needs</li>
+                    <li><b>Example:</b> 3D printing producing less material waste than subtractive methods</li>
+                    <li>Lean manufacturing principles eliminating unnecessary steps</li>
+                </ul></h3>
+
+                <h3 id="Pollution"><b><u>Pollution:</b></u></h3>
+                <h3><ul>
+                    <li>Direct and indirect contamination from production/use/disposal</li>
+                    <li><b>Example:</b> Microplastics from synthetic textiles entering waterways</li>
+                    <li><b>Example:</b> E-waste containing heavy metals leaching into soil</li>
+                    <li>Air pollution from manufacturing (CO₂, VOCs, particulate matter)</li>
+                </ul></h3>
+
+                <h3 id="GlobalWarming"><b><u>Global Warming:</b></u></h3>
+                <h3><ul>
+                    <li>Greenhouse gas emissions throughout product lifecycles</li>
+                    <li><b>Example:</b> Fast fashion contributing 10% of global carbon emissions</li>
+                    <li><b>Example:</b> Data centers for digital products using massive electricity</li>
+                    <li>Transportation impacts (sea freight vs air freight emissions)</li>
+                </ul></h3>
+
+                <h3><b>Positive Case Study:</b> Interface carpet tiles using recycled fishing nets (Net-Works program)</h3>
+                <h3><b>Negative Case Study:</b> Planned obsolescence in electronics creating waste mountains</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
