--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_how_the_critical_evaluation_of_new_and_emerging_tech.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_how_the_critical_evaluation_of_new_and_emerging_tech.html
@@ -13,6 +13,82 @@
 
             <div class="notes-content">
 
+                <!-- Planned Obsolescence -->
+                <h3 id="PlannedObsolescence"><b><u>Planned Obsolescence:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Business Perspectives</th>
+                        <th>Consumer/Environmental Impacts</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Ensures repeat purchases and revenue streams</li>
+                                <li>Allows for cheaper initial product pricing</li>
+                                <li>Drives continuous innovation cycles</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Creates excessive e-waste (53 million tonnes/year globally)</li>
+                                <li>Exploits consumers through forced upgrades</li>
+                                <li>Undermines sustainable design principles</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> Smartphone battery sealing, printer ink chip restrictions<br><br></h3>
+
+                <!-- Design for Maintenance -->
+                <h3 id="DesignForMaintenance"><b><u>Design for Maintenance:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Extends product lifespan (reduces waste)</li>
+                                <li>Modular components enable repairs/upgrades</li>
+                                <li>Creates secondary markets for parts</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Higher initial production costs</li>
+                                <li>Requires consumer education</li>
+                                <li>Reduces repeat purchase revenue</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Examples:</b> Fairphone modular smartphones, Patagonia repair programs<br><br></h3>
+
+                <!-- Ethics -->
+                <h3 id="Ethics"><b><u>Ethical Considerations:</b></u></h3>
+                <h3><ul>
+                    <li><b>Data Privacy:</b> IoT devices collecting user behavior data</li>
+                    <li><b>Labor Practices:</b> Conflict minerals in electronics</li>
+                    <li><b>Algorithmic Bias:</b> AI design reinforcing stereotypes</li>
+                    <li><b>Example:</b> Facial recognition systems performing poorly on darker skin tones</li>
+                </ul></h3>
+
+                <!-- Environment -->
+                <h3 id="Environment"><b><u>Environmental Factors:</b></u></h3>
+                <h3><ul>
+                    <li><b>Circular Design:</b> Cradle-to-cradle product lifecycles</li>
+                    <li><b>Energy Use:</b> Bitcoin mining consuming more electricity than Argentina</li>
+                    <li><b>Material Sourcing:</b> Rare earth element extraction impacts</li>
+                    <li><b>Example:</b> Apple's robot "Daisy" disassembling 200 iPhones/hour for recycling</li>
+                </ul></h3>
+
+                <h3><b>Evaluation Framework:</b> STAR method (Sustainability, Technicality, Affordability, Responsibility)</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
