--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_industry.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_industry.html
@@ -13,6 +13,34 @@
 
             <div class="notes-content">
 
+                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
+                <h3><ul>
+                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
+                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
+                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
+                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
+                </ul></h3>
+
+                <h3 id="BuildingDesign"><b><u>Buildings & Workspaces:</b></u></h3>
+                <h3><ul>
+                    <li><b>Smart Infrastructure:</b> The Edge (Amsterdam) using 28,000 sensors to optimize energy use</li>
+                    <li><b>Modular Construction:</b> Broad Group (China) assembling 57-storey skyscraper in 19 days</li>
+                    <li><b>Sustainable Materials:</b> Cross-laminated timber replacing steel in high-rises (e.g., Mjøstårnet, Norway)</li>
+                    <li><b>On-Demand Spaces:</b> WeWork using AI to predict desk utilisation patterns</li>
+                </ul></h3>
+
+                <h3 id="ToolsEquipment"><b><u>Tools & Equipment:</b></u></h3>
+                <h3><ul>
+                    <li><b>Cobots:</b> Universal Robots' collaborative robots working alongside humans without safety cages</li>
+                    <li><b>Exoskeletons:</b> Hyundai Chairless Exoskeleton reducing assembly worker fatigue by 40%</li>
+                    <li><b>Digital Twins:</b> Siemens using virtual replicas to test factory layouts before implementation</li>
+                    <li><b>Additive Manufacturing:</b> GE Aviation 3D printing fuel nozzles with 25% weight reduction</li>
+                </ul></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
