--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_people.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_people.html
@@ -12,6 +12,32 @@
             </div>
 
             <div class="notes-content">
+                <h3 id="TechPushMarketPull"><b><u>Technology Push vs Market Pull:</b></u></h3>
+                <h3><ul>
+                    <li><b>Technology Push:</b> Innovations driving new markets (e.g., iPhone creating smartphone demand)</li>
+                    <li><b>Market Pull:</b> Consumer needs pulling tech development (e.g., renewable energy demand driving battery research)</li>
+                    <li><b>Hybrid Example:</b> COVID-19 vaccine development (pushed by mRNA tech, pulled by pandemic needs)</li>
+                    <li><b>Data-Driven Choices:</b> Amazon using purchase history to guide warehouse robotics development</li>
+                </ul></h3>
+
+                <h3 id="ChangingJobRoles"><b><u>Changing Job Roles:</b></u></h3>
+                <h3><ul>
+                    <li><b>Emerging Roles:</b> AI trainers, drone operators, 3D printing technicians</li>
+                    <li><b>Transformed Roles:</b> Bank tellers → financial advisors (due to ATMs/online banking)</li>
+                    <li><b>Displaced Roles:</b> Assembly line workers replaced by collaborative robots (cobots)</li>
+                    <li><b>Upskilling Examples:</b> Automotive technicians training in EV battery systems</li>
+                </ul></h3>
+
+                <h3><b>Case Studies:</b></h3>
+                <h3><ul>
+                    <li><b>Healthcare:</b> Surgical nurses adapting to robotic surgery systems like da Vinci</li>
+                    <li><b>Retail:</b> Cashiers transitioning to "customer experience specialists" with self-checkout tech</li>
+                    <li><b>Construction:</b> Traditional architects learning BIM (Building Information Modeling)</li>
+                </ul></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 
 
