--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_society.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_society.html
@@ -13,6 +13,41 @@
 
             <div class="notes-content">
 
+                <h3 id="DesignForDisabled"><b><u>Design for Disabilities:</b></u></h3>
+                <h3><ul>
+                    <li><b>Mobility:</b> OXO Good Grips kitchen tools (arthritis-friendly)</li>
+                    <li><b>Vision:</b> Microsoft Xbox Adaptive Controller (tactile interfaces)</li>
+                    <li><b>Hearing:</b> Google Live Caption (real-time audio transcription)</li>
+                    <li><b>Cognitive:</b> IKEA pictorial assembly instructions</li>
+                </ul></h3>
+
+                <h3 id="DesignForElderly"><b><u>Design for Elderly:</b></u></h3>
+                <h3><ul>
+                    <li><b>Safety:</b> Walk-in bathtubs (Kohler) with non-slip surfaces</li>
+                    <li><b>Usability:</b> Jitterbug phones (simplified interfaces)</li>
+                    <li><b>Health:</b> Philips medication dispensers with alarms</li>
+                    <li><b>Social:</b> GrandPad tablet (curated communication)</li>
+                </ul></h3>
+
+                <h3 id="DesignForReligions"><b><u>Design for Religious Groups:</b></u></h3>
+                <h3><ul>
+                    <li><b>Islamic Needs:</b> Modest activewear (Nike Pro Hijab)</li>
+                    <li><b>Jewish Needs:</b> Kosher-certified appliances (separate meat/dairy modes)</li>
+                    <li><b>Hindu Needs:</b> Vegetarian food packaging (green dot labeling)</li>
+                    <li><b>Universal:</b> Airport prayer rooms with qibla compasses</li>
+                </ul></h3>
+
+                <h3><b>Design Principles:</b></h3>
+                <h3><ul>
+                    <li><b>Permanent:</b> Wheelchair ramps</li>
+                    <li><b>Temporary:</b> Pregnancy seatbelts</li>
+                    <li><b>Situational:</b> Voice assistants for multitaskers</li>
+                </ul></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
