--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_sustainability.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_sustainability.html
@@ -12,6 +12,39 @@
             </div>
 
             <div class="notes-content">
+                <h3 id="FiniteResources"><b><u>Finite Resources:</b></u></h3>
+                <h3><ul>
+                    <li><b>Definition:</b> Non-renewable materials with limited quantities (takes millions of years to form)</li>
+                    <li><b>Examples:</b> Fossil fuels, rare earth metals (neodymium for magnets), phosphate for fertilizers</li>
+                    <li><b>Impact:</b> 90% of biodiversity loss linked to resource extraction (UNEP 2019)</li>
+                    <li><b>Solutions:</b> Urban mining (recovering metals from e-waste), bio-based alternatives</li>
+                </ul></h3>
+
+                <h3 id="NonFiniteResources"><b><u>Non-Finite Resources:</b></u></h3>
+                <h3><ul>
+                    <li><b>Definition:</b> Renewable materials if managed responsibly</li>
+                    <li><b>Examples:</b> Bamboo (grows 1m/day), solar energy (173,000 TW hits Earth continuously)</li>
+                    <li><b>Challenges:</b> Overharvesting can make them de facto finite (e.g., deforestation)</li>
+                    <li><b>Innovations:</b> Mycelium packaging, algae-based bioplastics</li>
+                </ul></h3>
+
+                <h3 id="WasteDisposal"><b><u>Waste Disposal Impacts:</b></u></h3>
+                <h3><ul>
+                    <li><b>Landfills:</b> 2 billion tonnes/year global waste (World Bank), methane emissions</li>
+                    <li><b>Ocean Plastic:</b> 5.25 trillion particles circulating (Great Pacific Garbage Patch)</li>
+                    <li><b>E-Waste:</b> 57 million tonnes/year (2021), only 17% formally recycled</li>
+                    <li><b>Solutions:</b> Circular economy models, extended producer responsibility (EPR) laws</li>
+                </ul></h3>
+
+                <h3><b>Case Studies:</b></h3>
+                <h3><ul>
+                    <li><b>Positive:</b> Sweden's 99% waste recycling rate via energy recovery</li>
+                    <li><b>Negative:</b> Fast fashion producing 92 million tonnes/year of textile waste</li>
+                </ul></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 
 
