--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_culture.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_culture.html
@@ -13,6 +13,86 @@
 
             <div class="notes-content">
 
+                <h3 id="Culture"><b><u></b></u></h3>
+                <h3><ul>
+                    <li>Cultural influences shape product design, materials and manufacturing processes</li>
+                    <li>Technological advancements drive changes in fashion and consumer trends</li>
+                    <li>Designers must consider diverse cultural values and religious requirements</li>
+                </ul></h3>
+
+                <h3><b>Technology & Fashion:</b></h3>
+                <table>
+                    <tr class="notes-table-header" >
+                        <th>Emergent Technologies</th>
+                        <th>Cultural Impacts</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro" style="background-color: #79797937;">
+                            <ul>
+                                <li>3D printed clothing</li>
+                                <li>Smart fabrics with embedded sensors</li>
+                                <li>Augmented reality fashion apps</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #79797937;">
+                            <ul>
+                                <li>Fast fashion vs traditional craftsmanship</li>
+                                <li>Globalization of design styles</li>
+                                <li>Cultural appropriation concerns</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <h3><b>Inclusive Design Principles:</b></h3>
+                <h3><ul>
+                    <li>Respect religious requirements (e.g., modest clothing designs)</li>
+                    <li>Accommodate cultural symbols and color meanings</li>
+                    <li>Consider regional climate adaptations</li>
+                    <li>Address varying economic circumstances</li>
+                </ul></h3>
+
+                <h3><b>Examples:</b> Hijab-friendly sports gear, culturally appropriate medical devices, localized packaging designs</h3>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3 id="NikeControversy"><b><u>Nike Air Bakin' "Flame" Controversy (1997):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Issue</th>
+                        <th>Outcome</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-con" style="background-color: #79797937;">
+                            <ul>
+                                <li>Rear logo design resembled Arabic script for God</li>
+                                <li>Muslim community protested the sacred symbol being placed on footwear (considered disrespectful)</li>
+                                <li>Similar to 1996 Nike Air Shake ND dispute with Hebrew lettering</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro" style="background-color: #79797937;">
+                            <ul>
+                                <li>Nike recalled 38,000 pairs and destroyed remaining stock</li>
+                                <li>Established religious review process for future designs</li>
+                                <li>Case study in <b>cultural sensitivity</b> in product design</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <h3><b>Key Learning Points:</b></h3>
+                <h3><ul>
+                    <li>Global brands must vet designs across <b>all cultural contexts</b></li>
+                    <li>Religious symbols require special handling in commercial products</li>
+                    <li>Post-crisis response impacts brand reputation long-term</li>
+                </ul></h3>
+
+                <h3><b>Modern Applications:</b> Halal sportswear lines, culturally-vetted footwear designs</h3>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 
 
                 <h3><b>Topic test:</b></h3>
