--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_how_the_critical_evaluation_of_new_and_emerging_tech.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_how_the_critical_evaluation_of_new_and_emerging_tech.html
@@ -94,7 +94,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\digital_tech_exercises\&A.pdf">Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_how_the_critical_evaluation_of_new_and_emerging.pdf">How the critical evaluation of new and emerging technologies informs design decisions Questions</a>
                 </div> 
             </div>
         </div>
