--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/.html">Topic 2: Energy generation and storage</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/energy_generation_and_storage.html">Topic 2: Energy generation and storage</a>
                         </div>
                     </div>
                 </div>
