--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_nuclear_power.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_nuclear_power.html
@@ -8,45 +8,49 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Industry</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Nuclear Power</b></u></h1>
             </div>
 
             <div class="notes-content">
 
-                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
-                <h3><ul>
-                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
-                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
-                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
-                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
-                </ul></h3>
-
-                <h3 id="BuildingDesign"><b><u>Buildings & Workspaces:</b></u></h3>
-                <h3><ul>
-                    <li><b>Smart Infrastructure:</b> The Edge (Amsterdam) using 28,000 sensors to optimize energy use</li>
-                    <li><b>Modular Construction:</b> Broad Group (China) assembling 57-storey skyscraper in 19 days</li>
-                    <li><b>Sustainable Materials:</b> Cross-laminated timber replacing steel in high-rises (e.g., Mjøstårnet, Norway)</li>
-                    <li><b>On-Demand Spaces:</b> WeWork using AI to predict desk utilisation patterns</li>
-                </ul></h3>
-
-                <h3 id="ToolsEquipment"><b><u>Tools & Equipment:</b></u></h3>
-                <h3><ul>
-                    <li><b>Cobots:</b> Universal Robots' collaborative robots working alongside humans without safety cages</li>
-                    <li><b>Exoskeletons:</b> Hyundai Chairless Exoskeleton reducing assembly worker fatigue by 40%</li>
-                    <li><b>Digital Twins:</b> Siemens using virtual replicas to test factory layouts before implementation</li>
-                    <li><b>Additive Manufacturing:</b> GE Aviation 3D printing fuel nozzles with 25% weight reduction</li>
-                </ul></h3>
-
-                <div class="notes-content-subheader">
-                    <h2><hr><hr></h2>
-                </div>
+                <h3 id="nuclear-power"><b><u></u></b></h3>
+                <table id="nuclearTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Nuclear fission of uranium/plutonium atoms releases heat</li>
+                                <li>Heat produces steam to drive turbines</li>
+                                <li>Control rods regulate the chain reaction</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Zero CO<sub>2</sub> emissions during operation</li>
+                                <li>Extremely high energy density (1kg uranium = 3,000 tons coal)</li>
+                                <li>Continuous power (90%+ capacity factor)</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Radioactive waste requires secure long-term storage</li>
+                                <li>High initial construction costs</li>
+                                <li>Public fear of accidents (Chernobyl, Fukushima)</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
                 
 
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Industry Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1..pdf"> Questions</a>
                 </div> 
             </div>
         </div>
